--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Blank website</title>
+    <link href="https://fonts.googleapis.com/css?family=Instrument+Serif:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italianno:400" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
